# fingerprint-recognition-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  cnn.yaml  hybrid.yaml  mcc.yaml  minutiae.yaml  patch_cnn.yaml  ssim.yaml
experiments/: __init__.py  exp_01_ssim_fvc2004.py  exp_cnn_embedding.py  exp_cross_sensor.py  exp_mcc_descriptor.py  exp_minutiae_matching.py  exp_patch_cnn.py  exp_ssim_baseline.py
src/baselines/: __init__.py  ssim.py
src/data/: __init__.py  dataset.py  fingerprint_dataset.py  pair_generator.py  preprocessing.py
src/descriptors/: __init__.py  descriptor_matching.py  local_orientation_descriptor.py  mcc.py
src/enhancement/: __init__.py  gabor_filter.py  orientation_field.py  ridge_frequency.py
src/evaluation/: __init__.py  eer.py  metrics.py  roc.py  verification.py
src/minutiae/: __init__.py  minutiae_extraction.py  minutiae_matching.py  thinning.py
src/models/: __init__.py  cnn_embedding.py  hybrid_model.py  patch_cnn.py
src/registry/: __init__.py  adapters.py  dl_matchers.py  matcher_interface.py  matcher_registry.py
src/utils/: __init__.py  config.py  io.py  logger.py  model_loader.py
ui/: Homepage.py  README.md
ui/components/: __init__.py  comparison_table.py  config_panel.py  model_selector.py  result_viewer.py  uploader.py
ui/pages/: 1_🔐_Verification.py  2_📊_Analysis.py  3_⚖️_Comparison.py
ui/state/: __init__.py  session_state.py
ui/utils/: __init__.py  adapters.py  validation.py
ui/views/: __init__.py  analysis.py  comparison.py  verification.py
(+4 files in other folders)
