[project]
name = "hcmus-biometrics"
version = "0.1.0"
description = "Final Project of Biometrics Course in HCMUS-VNU"
authors = [
    {name = "tuong.nguyen",email = "richardnguyen0715@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=12.1.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
